[package]
name = "clrs-rust"
version = "0.1.0"
authors = ["TamTran72111 <tam.tran72111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "insertion_sort"
harness = false

[[bench]]
name = "merge_sort"
harness = false

[[bench]]
name = "heap_sort"
harness = false
